@@ -1,5 +1,15 @@
 package com.sheetmusic4j.fxdemo;
 
+import java.awt.Color;
+import java.awt.image.BufferedImage;
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.List;
+import java.util.Optional;
+import java.util.OptionalInt;
+
 import com.dlsc.pdfviewfx.PDFView;
 import com.sheetmusic4j.core.io.ScoreFile;
 import com.sheetmusic4j.core.model.MusicElement;
@@ -14,42 +24,56 @@ import com.sheetmusic4j.fxdemo.reference.DiffReportWriter;
 import com.sheetmusic4j.fxdemo.reference.ImageStack;
 import com.sheetmusic4j.fxdemo.reference.PdfRasterizer;
 import com.sheetmusic4j.fxviewer.SheetView;
+
 import javafx.animation.Animation;
 import javafx.animation.KeyFrame;
 import javafx.animation.Timeline;
 import javafx.application.Application;
 import javafx.application.Platform;
+import javafx.beans.property.DoubleProperty;
+import javafx.beans.property.SimpleDoubleProperty;
+import javafx.collections.ObservableList;
 import javafx.concurrent.Task;
 import javafx.geometry.Insets;
+import javafx.scene.Node;
 import javafx.scene.Scene;
-import javafx.scene.control.*;
+import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
+import javafx.scene.control.ButtonType;
+import javafx.scene.control.CheckMenuItem;
+import javafx.scene.control.Dialog;
 import javafx.scene.control.Label;
 import javafx.scene.control.Menu;
 import javafx.scene.control.MenuBar;
 import javafx.scene.control.MenuItem;
 import javafx.scene.control.ScrollPane;
+import javafx.scene.control.Separator;
+import javafx.scene.control.SeparatorMenuItem;
+import javafx.scene.control.SplitPane;
 import javafx.scene.control.TextArea;
+import javafx.scene.control.TreeCell;
+import javafx.scene.control.TreeItem;
+import javafx.scene.control.TreeView;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyCodeCombination;
 import javafx.scene.input.KeyCombination;
+import javafx.scene.input.ScrollEvent;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.web.WebView;
+import javafx.stage.DirectoryChooser;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
 import javafx.util.Duration;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 
-import java.awt.*;
-import java.awt.image.BufferedImage;
-import java.io.IOException;
-import java.io.InputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.List;
-import java.util.Optional;
-import java.util.OptionalInt;
+import java.util.Comparator;
+import java.util.Locale;
+import java.util.stream.Stream;
 
 /**
  * Standalone demo/testbed for the Sheetmusic4J {@link SheetView}. Provides a File menu
@@ -68,8 +92,25 @@ public final class SheetDemoApp extends Application {
             (float) Double.parseDouble(
                     System.getProperty("sheetmusic4j.compare.pdf.dpi", "150"));
 
+    /** Extensions the resource tree lists as loadable scores. */
+    private static final List<String> SCORE_EXTENSIONS =
+            List.of(".musicxml", ".xml", ".mxl", ".mid", ".midi", ".abc");
+    /** Extensions the resource tree lists as directly previewable images. */
+    private static final List<String> IMAGE_EXTENSIONS =
+            List.of(".png", ".jpg", ".jpeg", ".gif", ".bmp");
+
+    private static final double TREE_DIVIDER = 0.18;
+    private static final Log log = LogFactory.getLog(SheetDemoApp.class);
+
     private final SheetView sheetView = new SheetView();
     private final PDFView pdfView = new PDFView();
+    private final ImageView imageView = new ImageView();
+    private final ScrollPane imageScroll = new ScrollPane(imageView);
+    private final ImageView previewImageView = new ImageView();
+    private final ScrollPane previewImageScroll = new ScrollPane(previewImageView);
+    private final DoubleProperty previewImageZoom = new SimpleDoubleProperty(1.0);
+    private final Label previewZoomLabel = new Label();
+    private HBox previewImageToolbar;
     private final TextArea debugArea = new TextArea();
     private final Label statusLabel = new Label("Ready.");
     private final Label zoomLabel = new Label();
@@ -79,11 +120,19 @@ public final class SheetDemoApp extends Application {
     private final Button generateReferenceButton = new Button("Compare against PDF");
 
     private SplitPane split;
-    private BorderPane pdfPane;
+    private BorderPane treePane;
+    private TreeView<Path> resourceTree;
+    private Path resourcesRoot;
+    private BorderPane scorePane;
+    private BorderPane previewPane;
     private BorderPane debugPane;
     private BorderPane diffPane;
     private ScrollPane scoreScroll;
     private double lastViewportWidth = 0;
+
+    private boolean previewVisible = false;
+    private boolean debugVisible = false;
+    private boolean diffVisible = false;
 
     private Stage stage;
     private Path currentFile;
@@ -110,6 +159,26 @@ public final class SheetDemoApp extends Application {
     }
 
     /**
+     * Resolves the default root for the resource tree: {@code src/test/resources}
+     * relative to the current working directory (when launched from the {@code fxdemo}
+     * module) or relative to the repository root (when launched from elsewhere),
+     * falling back to the working directory itself.
+     *
+     * @return default resource tree root
+     */
+    private static Path defaultResourcesRoot() {
+        Path direct = Path.of("src/test/resources");
+        if (Files.isDirectory(direct)) {
+            return direct.toAbsolutePath();
+        }
+        Path fromRepoRoot = Path.of("fxdemo/src/test/resources");
+        if (Files.isDirectory(fromRepoRoot)) {
+            return fromRepoRoot.toAbsolutePath();
+        }
+        return Path.of(System.getProperty("user.dir"));
+    }
+
+    /**
      * Launches the JavaFX demo application.
      *
      * @param args command-line arguments passed to JavaFX
@@ -121,6 +190,7 @@ public final class SheetDemoApp extends Application {
     @Override
     public void start(Stage stage) {
         this.stage = stage;
+        configurePreviewImageView();
 
         BorderPane root = new BorderPane();
         root.setTop(buildMenuBar());
@@ -128,7 +198,7 @@ public final class SheetDemoApp extends Application {
 
         List<String> args = getParameters().getRaw();
         if (!args.isEmpty()) {
-            openFile(Path.of(args.get(0)));
+            openFile(Path.of(args.getFirst()));
         } else {
             updateDebug(null, Optional.empty());
         }
@@ -153,16 +223,28 @@ public final class SheetDemoApp extends Application {
         MenuItem close = new MenuItem("Close");
         close.setOnAction(e -> clear());
 
+        MenuItem changeResourcesFolder = new MenuItem("Change Resources Folder...");
+        changeResourcesFolder.setOnAction(e -> chooseResourcesRoot());
+
         MenuItem exit = new MenuItem("Exit");
         exit.setAccelerator(new KeyCodeCombination(KeyCode.Q, KeyCombination.SHORTCUT_DOWN));
         exit.setOnAction(e -> Platform.exit());
 
-        fileMenu.getItems().addAll(open, reload, close, new SeparatorMenuItem(), exit);
+        fileMenu.getItems().addAll(open, reload, close, new SeparatorMenuItem(),
+                changeResourcesFolder, new SeparatorMenuItem(), exit);
 
         Menu viewMenu = new Menu("View");
         MenuItem showDiff = new MenuItem("Show Diff tab");
         showDiff.setOnAction(e -> showDiffTab());
         viewMenu.getItems().add(showDiff);
+
+        CheckMenuItem showDebugInfo = new CheckMenuItem("Show debug info");
+        showDebugInfo.setSelected(false);
+        showDebugInfo.setOnAction(e -> {
+            debugVisible = showDebugInfo.isSelected();
+            rebuildSplit();
+        });
+        viewMenu.getItems().add(showDebugInfo);
 
         CheckMenuItem showBrackets = new CheckMenuItem("Show group brackets");
         showBrackets.setSelected(true);
@@ -236,6 +318,7 @@ public final class SheetDemoApp extends Application {
     }
 
     private SplitPane buildContent() {
+        BorderPane imagePane;
         scoreScroll = new ScrollPane(sheetView);
         // Do NOT fit the view to the viewport: SheetView is content-sized so
         // the ScrollPane can discover the real score dimensions and show
@@ -257,12 +340,30 @@ public final class SheetDemoApp extends Application {
                         : Optional.empty();
                 updateDebug(currentScore, pdf);
             }
+            updateScoreViewport();
         });
-        BorderPane scorePane = new BorderPane(scoreScroll);
+        // SheetView only ever materializes a Canvas window around whatever
+        // viewportTop/viewportHeight say is visible (see its class javadoc),
+        // so it must be told the scroll position - both when the user
+        // scrolls and whenever the content's own height changes (which
+        // changes how vvalue's 0..1 fraction maps to a pixel offset).
+        scoreScroll.vvalueProperty().addListener((obs, oldV, newV) -> updateScoreViewport());
+        sheetView.heightProperty().addListener((obs, oldV, newV) -> updateScoreViewport());
+        scorePane = new BorderPane(scoreScroll);
         scorePane.setTop(buildScoreToolbar());
 
-        pdfPane = new BorderPane(pdfView);
-        pdfPane.setTop(sectionTitle("Reference PDF"));
+        treePane = buildTreePane();
+
+        previewPane = new BorderPane(pdfView);
+        previewPane.setTop(sectionTitle("Preview"));
+
+        imageView.setPreserveRatio(true);
+        imageView.setSmooth(true);
+        imageScroll.setPannable(true);
+        imageScroll.setFitToWidth(true);
+        imageScroll.setFitToHeight(true);
+        imagePane = new BorderPane(imageScroll);
+        imagePane.setTop(sectionTitle("Reference image"));
 
         debugArea.setEditable(false);
         debugArea.setWrapText(false);
@@ -272,9 +373,173 @@ public final class SheetDemoApp extends Application {
 
         diffPane = buildDiffPane();
 
-        split = new SplitPane(scorePane, debugPane);
-        split.setDividerPositions(0.72);
+        split = new SplitPane();
+        rebuildSplit();
         return split;
+    }
+
+    /**
+     * Rebuilds the main {@link SplitPane}'s children from the current visibility
+     * flags ({@link #previewVisible}, {@link #debugVisible}, {@link #diffVisible}).
+     * The resource tree keeps a fixed {@link #TREE_DIVIDER} share; the remaining
+     * width is split evenly across whichever content panes are currently shown.
+     */
+    private void rebuildSplit() {
+        List<Node> items = new java.util.ArrayList<>();
+        items.add(treePane);
+        items.add(scorePane);
+        if (previewVisible) {
+            items.add(previewPane);
+        }
+        if (debugVisible) {
+            items.add(debugPane);
+        }
+        if (diffVisible) {
+            items.add(diffPane);
+        }
+        split.getItems().setAll(items);
+
+        int remaining = items.size() - 1;
+        double[] positions = new double[remaining];
+        if (remaining > 0) {
+            positions[0] = TREE_DIVIDER;
+            for (int k = 1; k < remaining; k++) {
+                positions[k] = TREE_DIVIDER + k * (1.0 - TREE_DIVIDER) / remaining;
+            }
+        }
+        split.setDividerPositions(positions);
+    }
+
+    private void configurePreviewImageView() {
+        previewImageView.setPreserveRatio(true);
+        previewImageView.setSmooth(true);
+        previewImageView.fitWidthProperty().bind(
+                previewImageScroll.widthProperty().subtract(4).multiply(previewImageZoom));
+        previewImageScroll.setFitToWidth(true);
+        previewImageScroll.setPannable(true);
+        previewImageScroll.addEventFilter(ScrollEvent.SCROLL, this::handlePreviewImageScroll);
+        previewImageToolbar = buildPreviewImageToolbar();
+    }
+
+    /**
+     * Ctrl/Cmd + scroll zooms the image preview in place of the ScrollPane's
+     * normal vertical scrolling; plain scroll/drag keeps panning the image.
+     */
+    private void handlePreviewImageScroll(ScrollEvent event) {
+        if (!event.isShortcutDown()) {
+            return;
+        }
+        adjustPreviewImageZoom(event.getDeltaY() > 0 ? ZOOM_STEP : 1.0 / ZOOM_STEP);
+        event.consume();
+    }
+
+    private HBox buildPreviewImageToolbar() {
+        Label title = sectionTitle("Preview");
+        Button zoomOut = new Button("-");
+        zoomOut.setOnAction(e -> adjustPreviewImageZoom(1.0 / ZOOM_STEP));
+        Button zoomIn = new Button("+");
+        zoomIn.setOnAction(e -> adjustPreviewImageZoom(ZOOM_STEP));
+        Button zoomReset = new Button("100%");
+        zoomReset.setOnAction(e -> setPreviewImageZoom(1.0));
+        previewZoomLabel.setPadding(new Insets(0, 8, 0, 0));
+        updatePreviewZoomLabel();
+
+        HBox spacer = new HBox();
+        HBox.setHgrow(spacer, Priority.ALWAYS);
+        HBox bar = new HBox(8, title, spacer, zoomOut, zoomIn, zoomReset, previewZoomLabel);
+        bar.setPadding(new Insets(4));
+        return bar;
+    }
+
+    private void adjustPreviewImageZoom(double factor) {
+        setPreviewImageZoom(previewImageZoom.get() * factor);
+    }
+
+    private void setPreviewImageZoom(double value) {
+        double clamped = Math.max(ZOOM_MIN, Math.min(ZOOM_MAX, value));
+        previewImageZoom.set(clamped);
+        updatePreviewZoomLabel();
+    }
+
+    private void updatePreviewZoomLabel() {
+        previewZoomLabel.setText(String.format(Locale.ROOT, "Zoom %.0f%%", previewImageZoom.get() * 100.0));
+    }
+
+    private BorderPane buildTreePane() {
+        resourcesRoot = defaultResourcesRoot();
+        resourceTree = new TreeView<>();
+        resourceTree.setCellFactory(tv -> new TreeCell<>() {
+            @Override
+            protected void updateItem(Path item, boolean empty) {
+                super.updateItem(item, empty);
+                setText(empty || item == null
+                        ? null
+                        : item.getFileName() != null ? item.getFileName().toString() : item.toString());
+            }
+        });
+        resourceTree.getSelectionModel().selectedItemProperty().addListener((obs, old, selected) -> {
+            if (selected != null && selected.getValue() != null && !Files.isDirectory(selected.getValue())) {
+                openTreeSelection(selected.getValue());
+            }
+        });
+        setTreeRoot(resourcesRoot);
+
+        BorderPane pane = new BorderPane(resourceTree);
+        pane.setTop(sectionTitle("Resources"));
+        return pane;
+    }
+
+    private void setTreeRoot(Path root) {
+        resourcesRoot = root;
+        PathTreeItem rootItem = new PathTreeItem(root);
+        rootItem.setExpanded(true);
+        resourceTree.setRoot(rootItem);
+    }
+
+    private void chooseResourcesRoot() {
+        DirectoryChooser chooser = new DirectoryChooser();
+        chooser.setTitle("Choose resources folder");
+        if (Files.isDirectory(resourcesRoot)) {
+            chooser.setInitialDirectory(resourcesRoot.toFile());
+        }
+        var dir = chooser.showDialog(stage);
+        if (dir != null) {
+            setTreeRoot(dir.toPath());
+            statusLabel.setText("Resources folder: " + dir.getAbsolutePath());
+        }
+    }
+
+    /**
+     * Dispatches a resource-tree file selection. The tree only ever lists
+     * score files (see {@link #SCORE_EXTENSIONS}), so this simply loads it.
+     *
+     * @param path selected file path
+     */
+    private void openTreeSelection(Path path) {
+        openFile(path);
+    }
+
+    private void showPreviewImage(Path imagePath) {
+        try (InputStream in = Files.newInputStream(imagePath)) {
+            previewImageView.setImage(new Image(in));
+            setPreviewImageZoom(1.0);
+            previewPane.setTop(previewImageToolbar);
+            showPreviewNode(previewImageScroll);
+            statusLabel.setText("Preview: " + imagePath.toAbsolutePath());
+        } catch (IOException | RuntimeException ex) {
+            showError("Failed to preview image", imagePath + "\n\n" + ex.getMessage());
+        }
+    }
+
+    private void showPreviewNode(Node node) {
+        previewPane.setCenter(node);
+        previewVisible = true;
+        rebuildSplit();
+    }
+
+    private void removePreview() {
+        previewVisible = false;
+        rebuildSplit();
     }
 
     private BorderPane buildDiffPane() {
@@ -306,20 +571,103 @@ public final class SheetDemoApp extends Application {
         zoomLabel.setPadding(new Insets(0, 8, 0, 0));
         updateZoomLabel();
 
+        Button reportButton = new Button("Report Visual Issue...");
+        reportButton.setOnAction(e -> reportVisualIssue());
+
         HBox spacer = new HBox();
         HBox.setHgrow(spacer, Priority.ALWAYS);
-        HBox bar = new HBox(8, title, spacer, new Separator(), zoomOut, zoomIn, zoomReset, zoomLabel);
+        HBox bar = new HBox(8, title, spacer, reportButton, new Separator(), zoomOut, zoomIn, zoomReset, zoomLabel);
         bar.setPadding(new Insets(4));
         return bar;
+    }
+
+    /**
+     * Captures the current (zoomed/scrolled) score view and, if shown, the preview
+     * pane, prompts the user for a free-text description of the visual issue, and
+     * writes both images plus a {@code report.json} sidecar (source file, zoom,
+     * description, image filenames) into a fresh timestamped folder under
+     * {@code target/sheetmusic4j-reports/}. Intended for reporting rendering-vs-
+     * reference differences in a form that is easy to hand off for follow-up.
+     */
+    private void reportVisualIssue() {
+        Optional<String> description = promptIssueDescription();
+        if (description.isEmpty()) {
+            return;
+        }
+        try {
+            Path outDir = createReportDirectory();
+            Path scoreImage = saveSnapshot(scoreScroll, outDir.resolve("score.png"));
+            Path previewImage = previewVisible ? saveSnapshot(previewPane, outDir.resolve("preview.png")) : null;
+            writeReportJson(outDir, description.get(), scoreImage, previewImage);
+            statusLabel.setText("Report saved: " + outDir.toAbsolutePath());
+        } catch (IOException ex) {
+            showError("Failed to save report", ex.getMessage());
+        }
+    }
+
+    private Optional<String> promptIssueDescription() {
+        Dialog<String> dialog = new Dialog<>();
+        dialog.initOwner(stage);
+        dialog.setTitle("Report Visual Issue");
+        dialog.setHeaderText("Describe the visual difference or issue you observed.\n"
+                + "The current score view (and preview, if shown) will be saved alongside this text.");
+        TextArea textArea = new TextArea();
+        textArea.setPrefRowCount(6);
+        textArea.setPrefColumnCount(40);
+        textArea.setWrapText(true);
+        dialog.getDialogPane().setContent(textArea);
+        dialog.getDialogPane().getButtonTypes().addAll(ButtonType.OK, ButtonType.CANCEL);
+        dialog.setResultConverter(button -> button == ButtonType.OK ? textArea.getText() : null);
+        return dialog.showAndWait();
+    }
+
+    private Path createReportDirectory() throws IOException {
+        String stamp = java.time.format.DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss-SSS")
+                .format(java.time.LocalDateTime.now());
+        Path dir = Path.of( "reports", "report-" + stamp);
+        Files.createDirectories(dir);
+        return dir;
+    }
+
+    private Path saveSnapshot(Node node, Path file) throws IOException {
+        javafx.scene.image.WritableImage image = node.snapshot(new javafx.scene.SnapshotParameters(), null);
+        BufferedImage buffered = javafx.embed.swing.SwingFXUtils.fromFXImage(image, null);
+        javax.imageio.ImageIO.write(buffered, "png", file.toFile());
+        return file;
+    }
+
+    private void writeReportJson(Path dir, String description, Path scoreImage, Path previewImage)
+            throws IOException {
+        String json = "{\n"
+                + "  \"timestamp\": " + jsonString(java.time.Instant.now().toString()) + ",\n"
+                + "  \"sourceFile\": " + jsonString(currentFile != null ? currentFile.toAbsolutePath().toString() : null) + ",\n"
+                + "  \"zoom\": " + sheetView.getZoom() + ",\n"
+                + "  \"description\": " + jsonString(description) + ",\n"
+                + "  \"scoreImage\": " + jsonString(scoreImage.getFileName().toString()) + ",\n"
+                + "  \"previewImage\": " + jsonString(previewImage != null ? previewImage.getFileName().toString() : null) + "\n"
+                + "}\n";
+        Files.writeString(dir.resolve("report.json"), json);
+        log.info("Report written to " + dir.toAbsolutePath());
+    }
+
+    private static String jsonString(String value) {
+        if (value == null) {
+            return "null";
+        }
+        String escaped = value.replace("\\", "\\\\").replace("\"", "\\\"")
+                .replace("\n", "\\n").replace("\r", "\\r").replace("\t", "\\t");
+        return "\"" + escaped + "\"";
     }
 
     private void chooseAndOpen() {
         FileChooser chooser = new FileChooser();
         chooser.setTitle("Open score");
         chooser.getExtensionFilters().addAll(
-                new FileChooser.ExtensionFilter("Score files", "*.musicxml", "*.xml", "*.mxl", "*.mid", "*.midi"),
+                new FileChooser.ExtensionFilter("Score files",
+                        "*.musicxml", "*.xml", "*.mxl", "*.mid", "*.midi", "*.abc"),
                 new FileChooser.ExtensionFilter("MusicXML", "*.musicxml", "*.xml", "*.mxl"),
                 new FileChooser.ExtensionFilter("MIDI", "*.mid", "*.midi"),
+                new FileChooser.ExtensionFilter("ABC", "*.abc"),
                 new FileChooser.ExtensionFilter("All files", "*.*"));
         var file = chooser.showOpenDialog(stage);
         if (file != null) {
@@ -334,44 +682,51 @@ public final class SheetDemoApp extends Application {
             currentFile = path;
             currentScore = score;
             sheetView.setScore(score);
+            updateScoreViewport();
             Optional<Path> pdf = PdfSibling.existingPathFor(path);
-            showPdf(pdf);
+            Optional<Path> image = pdf.isPresent() ? Optional.empty() : ImageSibling.existingPathFor(path);
+            if (pdf.isPresent()) {
+                showPdfSibling(pdf);
+            } else if (image.isPresent()) {
+                showPreviewImage(image.get());
+            } else {
+                removePreview();
+            }
             updateDebug(score, pdf);
             stage.setTitle("Sheetmusic4J Demo - " + path.getFileName());
             generateReferenceButton.setDisable(pdf.isEmpty());
-            diffStatus.setText(pdf.isPresent()
-                    ? "Click 'Compare against PDF' to render the diff report."
-                    : "No sibling PDF for this score - diff disabled.");
-            statusLabel.setText("Loaded: " + path.toAbsolutePath()
-                    + (pdf.isPresent() ? "  (PDF: " + pdf.get().getFileName() + ")" : ""));
+            String referenceHint;
+            if (pdf.isPresent()) {
+                referenceHint = "  (PDF: " + pdf.get().getFileName() + ")";
+                diffStatus.setText("Click 'Compare against PDF' to render the diff report.");
+            } else if (image.isPresent()) {
+                referenceHint = "  (image: " + image.get().getFileName() + ")";
+                diffStatus.setText("No sibling PDF for this score - diff disabled. "
+                        + "Showing sibling image " + image.get().getFileName() + " instead.");
+            } else {
+                referenceHint = "";
+                diffStatus.setText("No sibling PDF for this score - diff disabled.");
+            }
+            statusLabel.setText("Loaded: " + path.toAbsolutePath() + referenceHint);
         } catch (RuntimeException ex) {
             showError("Failed to open file", path + "\n\n" + ex.getMessage());
             statusLabel.setText("Error loading: " + path);
         }
     }
 
-    private void showPdf(Optional<Path> pdf) {
-        boolean shown = split.getItems().contains(pdfPane);
+    private void showPdfSibling(Optional<Path> pdf) {
         if (pdf.isPresent()) {
             try (InputStream in = Files.newInputStream(pdf.get())) {
                 pdfView.load(in);
-                if (!shown) {
-                    // Insert the PDF pane between the score and the debug pane.
-                    split.getItems().add(1, pdfPane);
-                    split.setDividerPositions(0.42, 0.80);
-                }
+                previewPane.setTop(sectionTitle("Preview"));
+                showPreviewNode(pdfView);
             } catch (IOException | RuntimeException ex) {
-                removePdf();
+                removePreview();
                 statusLabel.setText("Could not display PDF: " + ex.getMessage());
             }
         } else {
-            removePdf();
+            removePreview();
         }
-    }
-
-    private void removePdf() {
-        split.getItems().remove(pdfPane);
-        split.setDividerPositions(0.72);
     }
 
     /**
@@ -391,14 +746,8 @@ public final class SheetDemoApp extends Application {
     }
 
     private void showDiffTab() {
-        if (!split.getItems().contains(diffPane)) {
-            split.getItems().add(diffPane);
-            double[] positions = new double[split.getItems().size() - 1];
-            for (int i = 0; i < positions.length; i++) {
-                positions[i] = (i + 1.0) / (positions.length + 1.0);
-            }
-            split.setDividerPositions(positions);
-        }
+        diffVisible = true;
+        rebuildSplit();
     }
 
     private void adjustZoom(double factor) {
@@ -431,6 +780,26 @@ public final class SheetDemoApp extends Application {
      */
     private double currentViewportWidth() {
         return lastViewportWidth > 0 ? lastViewportWidth : DIFF_WIDTH;
+    }
+
+    /**
+     * Translates {@code scoreScroll}'s current scroll position/viewport size
+     * into the local pixel units {@link SheetView} expects and pushes them
+     * into {@link SheetView#viewportTopProperty()}/
+     * {@link SheetView#viewportHeightProperty()}, so its internal Canvas
+     * window follows scrolling for scores too tall to fit in one Canvas.
+     */
+    private void updateScoreViewport() {
+        var bounds = scoreScroll.getViewportBounds();
+        if (bounds == null || bounds.getHeight() <= 0) {
+            return;
+        }
+        double viewportHeight = bounds.getHeight();
+        double contentHeight = sheetView.getHeight();
+        double maxScroll = Math.max(0, contentHeight - viewportHeight);
+        double top = scoreScroll.getVvalue() * maxScroll;
+        sheetView.setViewportHeight(viewportHeight);
+        sheetView.setViewportTop(top);
     }
 
     private void generateReferenceAsync() {
@@ -504,7 +873,7 @@ public final class SheetDemoApp extends Application {
         currentFile = null;
         currentScore = null;
         sheetView.setScore(null);
-        removePdf();
+        removePreview();
         updateDebug(null, Optional.empty());
         stage.setTitle("Sheetmusic4J Demo");
         statusLabel.setText("Closed.");
@@ -581,21 +950,77 @@ public final class SheetDemoApp extends Application {
 
     private void showAbout() {
         Alert alert = new Alert(Alert.AlertType.INFORMATION);
+        alert.initOwner(stage);
         alert.setTitle("About Sheetmusic4J Demo");
         alert.setHeaderText("Sheetmusic4J Demo");
         alert.setContentText("""
                 A JavaFX testbed for the Sheetmusic4J sheet-music rendering library.
-                Open MusicXML or MIDI files to preview how they are engraved.
-                A companion PDF (same file name) is shown side by side when present.
+                Open MusicXML or MIDI files to preview how they are engraved, either via
+                File -> Open... or by clicking a file in the Resources tree on the left.
+                A companion PDF (same file name) is shown side by side when present, and
+                clicking a PDF or image directly in the tree previews it the same way.
                 Use View -> Show Diff tab to compare against the sibling PDF.""");
         alert.showAndWait();
     }
 
     private void showError(String header, String message) {
         Alert alert = new Alert(Alert.AlertType.ERROR);
+        alert.initOwner(stage);
         alert.setTitle("Error");
         alert.setHeaderText(header);
         alert.setContentText(message);
         alert.showAndWait();
+    }
+
+    /**
+     * Lazily-populated {@link TreeItem} backed by a filesystem {@link Path}. Directory
+     * children are listed only when first expanded, and are filtered to
+     * subdirectories plus files this demo knows how to open (see
+     * {@link #SCORE_EXTENSIONS}). PDFs and images are shown as reference previews
+     * alongside a loaded score, not as selectable tree entries.
+     */
+    private static final class PathTreeItem extends TreeItem<Path> {
+
+        private boolean childrenLoaded = false;
+
+        PathTreeItem(Path path) {
+            super(path);
+        }
+
+        @Override
+        public boolean isLeaf() {
+            return !Files.isDirectory(getValue());
+        }
+
+        @Override
+        public ObservableList<TreeItem<Path>> getChildren() {
+            if (!childrenLoaded) {
+                childrenLoaded = true;
+                super.getChildren().setAll(listChildren(getValue()));
+            }
+            return super.getChildren();
+        }
+
+        private static boolean isDisplayable(Path path) {
+            if (Files.isDirectory(path)) {
+                return true;
+            }
+            String name = path.getFileName().toString().toLowerCase(Locale.ROOT);
+            return SCORE_EXTENSIONS.stream().anyMatch(name::endsWith);
+        }
+
+        private static List<TreeItem<Path>> listChildren(Path dir) {
+            try (Stream<Path> stream = Files.list(dir)) {
+                return stream
+                        .filter(PathTreeItem::isDisplayable)
+                        .sorted(Comparator
+                                .comparing((Path p) -> !Files.isDirectory(p))
+                                .thenComparing(p -> p.getFileName().toString(), String.CASE_INSENSITIVE_ORDER))
+                        .map(p -> (TreeItem<Path>) new PathTreeItem(p))
+                        .toList();
+            } catch (IOException e) {
+                return List.of();
+            }
+        }
     }
 }
